Added social icon hover color change.

--- a/themes/kscu-theme/layouts/partials/header/basic.html
+++ b/themes/kscu-theme/layouts/partials/header/basic.html
@@ -125,13 +125,13 @@
           <div id="social-media" class="flex items-center" style="padding-right: 1rem">
             <div style="height: 28px; width: 1px; background-color: black; margin-right: 1rem;"></div>
             <a href="https://www.instagram.com/kscuradio/?hl=en" target="_blank">
-              <i class="fa fa-instagram px-2 hover:text-neutral-500" style="font-size: 24px; color: black;"></i>
+              <i class="fa fa-instagram px-2 hover:text-neutral-500" style="font-size: 24px; transition: color 0.1s;"></i>
             </a>
             <a href="https://twitter.com/kscu" target="_blank">
-              <i class="fa fa-twitter px-2 hover:text-neutral-500" style="font-size: 24px; color: black;"></i>
+              <i class="fa fa-twitter px-2 hover:text-neutral-500" style="font-size: 24px; transition: color 0.1s;"></i>
             </a>
             <a href="https://open.spotify.com/user/kscu" target="_blank">
-              <i class="fa fa-spotify px-2 hover:text-neutral-500" style="font-size: 24px; color: black;"></i>
+              <i class="fa fa-spotify px-2 hover:text-neutral-500" style="font-size: 24px; transition: color 0.1s;"></i>
             </a>
           </div>
         </div>
