fixed border issue between show title and song title divs
only works w/ screens that have at least 375px

--- a/themes/kscu-theme/layouts/partials/header/basic.html
+++ b/themes/kscu-theme/layouts/partials/header/basic.html
@@ -102,9 +102,10 @@
             </ul>
           </div>
         </div>
-        <!-- White divider line -->
+        <!-- Black divider line -->
+        <!-- width: full for screens of width at least 375px -->
         <div style="
-        width: screen;
+        width: full;
         height: 1px;
         background-color: black;">
         </div>
