reverting back to width: screen because border size is still too big

--- a/themes/kscu-theme/layouts/partials/header/basic.html
+++ b/themes/kscu-theme/layouts/partials/header/basic.html
@@ -105,7 +105,7 @@
         <!-- Black divider line -->
         <!-- width: full for screens of width at least 375px -->
         <div style="
-        width: full;
+        width: screen;
         height: 1px;
         background-color: black;">
         </div>
