Added hover effect to icons in nav.

--- a/themes/kscu-theme/layouts/partials/header/basic.html
+++ b/themes/kscu-theme/layouts/partials/header/basic.html
@@ -59,17 +59,17 @@
             <!-- play for play button, volume for volume button -->
             <button id="play-pause" class="">
               <img id="play" src="/play-solid.svg" alt="Click to Play" height="12" width="12"
-                style="margin-left: 1rem; margin-right: 1rem;">
+                style="margin-left: 1rem; margin-right: 1rem; transition: filter 0.1s;">
               <img id="pause" src="/pause-solid.svg" alt="Click to Pause" height="12" width="12"
-                style="margin-left: 1rem; margin-right: 1rem; display: none;">
+                style="margin-left: 1rem; margin-right: 1rem; transition: filter 0.1s; display: none;">
               <img id="loader" src="/tower-broadcast-solid.svg" alt="Loading" height="12" width="12"
                 style="margin-left: 1rem; margin-right: 1rem; display: none;">
             </button>
             <div id="volume-icon" style="height: 28px; width: 1px; background-color: black;"></div>
             <div id="volume-icon" class="px-1">
               <button onclick="toggleVolume()" style="margin-top: 0.4rem;">
-                <img src="/volume.svg" alt="Volume Icon" width="20" height="20"
-                  style="margin-left: 0.3rem; margin-right: 0.3rem;"></img>
+                <img id="volume-i" src="/volume.svg" alt="Volume Icon" width="20" height="20"
+                  style="margin-left: 0.3rem; margin-right: 0.3rem; transition: filter 0.1s;"></img>
               </button>
             </div>
             <!-- Need to connect volume adjustor to this slider -->
@@ -153,21 +153,21 @@
         <div class="flex justify-left items-center">
           <div id="new-social-media" class="flex items-center" style="padding-left: 0.5rem; padding-top: 0.1rem">
             <a href="https://www.instagram.com/kscuradio/?hl=en" target="_blank">
-              <i class="fa fa-instagram px-2" style="font-size: 24px; color: black;"></i>
+              <i class="fa fa-instagram px-2 hover:text-neutral-500" style="font-size: 24px; transition: color 0.1s;"></i>
             </a>
             <a href="https://twitter.com/kscu" target="_blank">
-              <i class="fa fa-twitter px-2" style="font-size: 24px; color: black;"></i>
+              <i class="fa fa-twitter px-2 hover:text-neutral-500" style="font-size: 24px; transition: color 0.1s;"></i>
             </a>
             <a href="https://open.spotify.com/user/kscu" target="_blank">
-              <i class="fa fa-spotify px-2" style="font-size: 24px; color: black;"></i>
+              <i class="fa fa-spotify px-2 hover:text-neutral-500" style="font-size: 24px; transition: color 0.1s;"></i>
             </a>
             <div style="height: 30px; width: 1px; background-color: black; margin-left: 0.5rem;"></div>
           </div>
           <button id="play-pause-mobile" class="">
             <img id="play-mobile" src="/play-solid.svg" alt="Click to Play" height="12" width="12"
-              style="margin-left: 1rem; margin-right: 1rem;">
+              style="margin-left: 1rem; margin-right: 1rem; transition: filter 0.1s;">
             <img id="pause-mobile" src="/pause-solid.svg" alt="Click to Pause" height="12" width="12"
-              style="margin-left: 1rem; margin-right: 1rem; display: none;">
+              style="margin-left: 1rem; margin-right: 1rem; transition: filter 0.1s; display: none;">
             <img id="loader-mobile" src="/tower-broadcast-solid.svg" alt="Loading" height="12" width="12"
               style="margin-left: 1rem; margin-right: 1rem; display: none;">
           </button>
@@ -175,8 +175,8 @@
           <div class="px-1">
             <!-- Need to connect volume adjustor to this svg -->
             <button onclick="toggleVolume()" style="margin-top: 0.4rem;">
-              <img src="/volume.svg" alt="Volume Icon" width="20" height="20"
-                style="margin-left: 0.3rem; margin-right: 0.3rem;"></img>
+              <img id="volume-i" src="/volume.svg" alt="Volume Icon" width="20" height="20"
+                style="margin-left: 0.3rem; margin-right: 0.3rem; transition: filter 0.1s;"></img>
             </button>
           </div>
           <div style="height: 30px; width: 1px; background-color: black;"></div>
@@ -341,6 +341,26 @@
     background: #555;
     border-radius: 10px;
     cursor: pointer;
+  }
+
+  #volume-i:hover {
+    filter: invert(30%);
+  }
+
+  #play:hover {
+    filter: invert(30%);
+  }
+
+  #play-mobile:hover {
+    filter: invert(30%);
+  }
+
+  #pause:hover {
+    filter: invert(30%);
+  }
+
+  #pause-mobile:hover {
+    filter: invert(30%);
   }
 
 </style>
