Change color of volume slider.

--- a/themes/kscu-theme/layouts/partials/header/basic.html
+++ b/themes/kscu-theme/layouts/partials/header/basic.html
@@ -315,10 +315,10 @@
   #player {
     width: 30px;
     height: 145px;
-    background-color: lightgray;
+    background-color: rgb(237 232 224);
     border-radius: 5px;
     display: none;
-    box-shadow: 1px 1px 5px #94949466;
+    box-shadow: 1px 1px 5px rgb(104, 102, 100);
   }
 
   .slider {
@@ -327,7 +327,7 @@
     position: absolute;
     width: 100px;
     height: 4px;
-    background: rgb(158, 157, 157);
+    background: rgb(187, 183, 177);
     outline: none;
     left: -35px;
     top: 71px;
@@ -338,7 +338,7 @@
     appearance: none;
     width: 12px;
     height: 12px;
-    background: #555;
+    background: rgb(105, 103, 100);
     border-radius: 10px;
     cursor: pointer;
   }
