Changed crowd to homepage only and removed crowd from Safari

--- a/themes/kscu-theme/layouts/_default/baseof.html
+++ b/themes/kscu-theme/layouts/_default/baseof.html
@@ -39,14 +39,10 @@
       {{ end }}
     </main>
   </div>
-
-  <canvas id="canvas" style="z-index: 1;"></canvas>
   {{ $jsGsap := resources.Get "js/gsap.min.js" | resources.Minify | resources.Fingerprint "sha512" }}
   <script defer type="text/javascript" src="{{ $jsGsap.RelPermalink }}" integrity="{{ $jsGsap.Data.Integrity }}"></script>
-  {{ $jsCrowd := resources.Get "js/crowd.js" | resources.Minify | resources.Fingerprint "sha512" }}
-  <script defer type="text/javascript" src="{{ $jsCrowd.RelPermalink }}" integrity="{{ $jsCrowd.Data.Integrity }}"></script>
-
-
+  {{- partial "footer.html" . -}}
+  <canvas id="canvas" style="z-index: 1; display: none;"></canvas>
 </body>
 
 </html>
