--- a/themes/kscu-theme/layouts/partials/footer.html
+++ b/themes/kscu-theme/layouts/partials/footer.html
@@ -11,7 +11,7 @@
   color: black;
 
  -->
-<footer class="font-sm text-sm relative">
+<footer class="font-sm text-sm relative z-10 pt-3 pb-8">
   <div class="px-6 pt-2 pb-4 max-w-7xl m-auto">
     <div class="flex flex-col justify-between border">
       <div id="flex_container" class="flex justify-between items-center px-2"
