Fixed overflow issue in mobile nav.

--- a/themes/kscu-theme/layouts/partials/header/basic.html
+++ b/themes/kscu-theme/layouts/partials/header/basic.html
@@ -29,7 +29,7 @@
  -->
 <div id="nav" class="font-medium text-sm z-10">
   <div class="px-6 pt-4 max-w-7xl m-auto">
-    <div class="flex justify-between items-center" style="
+    <div class="flex justify-between items-center overflow-hidden" style="
       border: 1px solid black;
       height: 58px;">
       <div class="flex px-3 py-6 items-center" style="
@@ -81,7 +81,7 @@
             <!-- contain to row by setting height to 29px -->
             <div id="volume-line" style="height: 28px; width: 1px; background-color: black;"></div>
             <div class="flex flex-row display">
-              <div class="pl-2 overflow-hidden" style="text-overflow: ellipsis; display: block; flex-basis: 50vw;">
+              <div class="pl-2" style="display: block; flex-basis: 50vw;">
                 <p class="whitespace-nowrap" id="show_title"></p>
               </div>
             </div>
@@ -117,7 +117,7 @@
             </div>
             <!-- contain to row by setting height to 29px -->
             <div id="playing-text" style="height: 28px; width: 1px; background-color: black;"></div>
-            <div class="flex flex-row overflow-hidden whitespace-nowrap" style="text-overflow: ellipsis; display: block; flex-basis: 55vw;">
+            <div class="flex flex-rowwhitespace-nowrap" style="display: block; flex-basis: 55vw;">
               <p id="playing-song" class="pl-2 pr-3 py-1"
                 style="height: 30px; font-family: 'IBM Plex Mono', monospace;">
               </p>
