--- a/themes/kscu-theme/layouts/partials/header/basic.html
+++ b/themes/kscu-theme/layouts/partials/header/basic.html
@@ -34,7 +34,7 @@
       height: 58px;
       overflow: hidden;
       ">
-      <div class="flex px-3 py-6 items-center" style="
+      <div class="flex px-1 items-center" style="
       border-right: 1px solid black;
       height: 100%;
       min-width: 100px;
@@ -78,7 +78,7 @@
             <div class="absolute">
               <div id="player">
                 <i class="fa fa-volume-up absolute" style="top:0; margin-left: 15px; margin-top: 4px;"></i>
-                <input type="range" min="1" max="100" value="50" class="slider" id="volume" onchange="showValue(this.value)" oninput="showValue(this.value)">
+                <input type="range" min="1" max="100" value="100" class="slider" id="volume" onchange="showValue(this.value)" oninput="showValue(this.value)">
                 <i class="fa fa-volume-down absolute" style="bottom:0; margin-left: 15px; margin-bottom: 4px;"></i>
               </div>
             </div>
