--- a/themes/kscu-theme/layouts/partials/recent-articles.html
+++ b/themes/kscu-theme/layouts/partials/recent-articles.html
@@ -14,7 +14,8 @@
 <div>
   <div class="font-semibold text-2xl py-3 px-3 border">
     <a href="/blog/">
-      <span class="hover:underline hover:decoration-wavy hover:decoration-1 hover:underline-offset-2 hover:text-gray-400">
+      <span class="hover:underline hover:decoration-wavy hover:decoration-1 hover:underline-offset-2 hover:text-gray-400"
+        style="text-decoration-skip-ink: none;">
         Recent Blogposts
       </span>
     </a>
