--- a/themes/kscu-theme/layouts/partials/header/basic.html
+++ b/themes/kscu-theme/layouts/partials/header/basic.html
@@ -97,6 +97,7 @@
               {{ range .Site.Menus.main }}
               <li style="margin-left: 1rem;">
                 <a class="decoration-primary-500 hover:text-neutral-500 hover:underline hover:decoration-1 hover:underline-offset-2 hover:text-gray-400 hover:decoration-wavy"
+                  style="text-decoration-skip-ink: none;"
                   href="{{ .URL }}" title="{{ .Title }}">{{
                   .Name
                   | markdownify | emojify }}</a>
@@ -193,6 +194,7 @@
             {{ range .Site.Menus.main }}
             <li style="margin-left: 1rem;">
               <a class="decoration-primary-500 hover:text-neutral-500 hover:underline hover:decoration-1 hover:underline-offset-2 hover:text-gray-400 hover:decoration-wavy"
+                style="text-decoration-skip-ink: none;"
                 href="{{ .URL }}" title="{{ .Title }}">{{
                 .Name
                 | markdownify | emojify }}</a>
