Added safari tab color metadata

--- a/themes/kscu-theme/layouts/_default/baseof.html
+++ b/themes/kscu-theme/layouts/_default/baseof.html
@@ -1,5 +1,6 @@
 {{- partial "partials/functions/warnings.html" .Site -}}
 <!DOCTYPE html>
+<meta name="theme-color" content="#ede8e0">
 <html lang="{{ with .Site.Params.isoCode | default (.Site.LanguageCode | default " en") }} {{- . -}} {{ end }}" dir="{{ if .Site.Params.rtl | default false -}}
     rtl
   {{- else -}}
