Fixed having to click volume slider twice.

--- a/themes/kscu-theme/layouts/partials/header/basic.html
+++ b/themes/kscu-theme/layouts/partials/header/basic.html
@@ -76,7 +76,7 @@
             </div>
             <!-- Need to connect volume adjustor to this slider -->
             <div class="absolute">
-              <div id="player">
+              <div id="player" style="display: none;">
                 <i class="fa fa-volume-up absolute" style="top:0; margin-left: 15px; margin-top: 4px;"></i>
                 <input type="range" min="1" max="100" value="100" class="slider" id="volume" onchange="showValue(this.value)" oninput="showValue(this.value)">
                 <i class="fa fa-volume-down absolute" style="bottom:0; margin-left: 15px; margin-bottom: 4px;"></i>
